--- a/frontend/src/styles/Data.module.css
+++ b/frontend/src/styles/Data.module.css
@@ -1,10 +1,8 @@
 .charts{
     display: flex;
     justify-content: center;
-    flex-direction: column;
     gap: 5rem;
-    align-items: center;
-    align-items: center;
+    align-items: flex-start;
     max-width: 120rem;
     margin: 0 auto;
     padding: 5rem 0;
@@ -16,6 +14,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.chart-2{
+    width: 50% !important;
+    height: auto !important;
+    aspect-ratio: 1/1 !important;
+    margin: 0 auto;
 }
 .chart h3{
     font-size: 2.5rem;
